2006-12-05  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/socket.c:
   Prevent Valgrind warning with unlink(NULL).


2006-12-04  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/highlighting.c, data/filetypes.d:
   Move C/C++ styling_within_preprocessor code out of C-like styles.
   Use styleset_c_like() when applying C-like Scintilla styles.
   Synchronize gsd_reserved_word, gsd_system_word and data/filetypes.d
   with styles in data/filetypes.c.


2006-12-04  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/document.c: Use default GTK foreground colour for filenames on
                   notebook tabs instead of hardcoded colour black.
 * src/sci_cb.c: Fixed broken auto completion for LaTeX files.


2006-12-03  Enrico Tröger  <enrico.troeger@uvena.de>

 * data/filetypes.c, data/filetypes.cpp, data/filetypes.d,
   data/filetypes.ferite, data/filetypes.java, src/highlighting.c:
   Added new style for doc keyword error and added some doc key words
   for Doxygen and Javadoc.
 * geany.glade, src/geany.h, src/interface.c, src/keyfile.c,
   src/prefs.c, src/sci_cb.c:
   Added new preference to unfold all children of a fold point if the
   fold point is unfolded.
 * src/msgwindow.c: Applied patch from Bob Doan to ignore libtool
                    messages when parsing the output of make (thanks).
 * src/sci_cb.c, src/sci_cb.h:
   Made handle_xml() static.
   Fixed wrong XML auto completion in PHP files when inserting '>',
   thanks to Bob Doan for reporting.


2006-12-02  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/highlighting.c: Use the same style for unknown doc keywords
                       (/** @something */) as for known keywords.


2006-12-01  Enrico Tröger  <enrico.troeger@uvena.de>

 * geany.glade, src/interface.c, src/geany.h, src/main.c,
   src/ui_utils.c:
   Removed invisible place holder menu item in recent files menu.
   Create separate sub menu for the recent files menu in the toolbar to