@@ -224,4 +224,7 @@ void document_redo(gint idx);
 
 void document_undo_add(gint idx, guint type, gpointer data);
 
+
+GdkColor *document_get_status(gint idx);
+
 #endif
